# Momentum

./: Makefile  README.md  database_design.sql
microservices/: docker-compose.yml
microservices/mdb_interface/: Dockerfile  README.md  pyproject.toml  requirements.txt  test_api.py
microservices/mdb_interface/src/app/: __main__.py  main.py
microservices/mdb_interface/src/app/database/: communities.py
microservices/momentum_gql/: Dockerfile  README.md  pyproject.toml
microservices/users/: Dockerfile  Makefile  go.mod  users.go
momentum_desktop/Assets/: community.html  landing.html  profile.html  settings.html
momentum_desktop/Momentum/: Momentum.pro  landing.cpp  landing.h  landing.ui  main.cpp
momentum_frontend/: community.html  landing.html  profile.html  register.html
momentum_gql/: README.md  docker-compose.yml  pyproject.toml  requirements.txt
momentum_gql/app/database/: comments.py  users.py
momentum_gql/app/resources/schema/: __init__.py  mutation.graphql  payload.graphql
momentum_gql/src/app/: __main__.py  main.py
momentum_gql/src/app/database/: comments.py  communities.py  posts.py  user_community.py  users.py  util.py
momentum_gql/src/app/resolvers/: __init__.py
momentum_gql/src/app/resolvers/enums/: __init__.py
momentum_gql/src/app/resolvers/mutations/: __init__.py  create_comment.py  create_community.py  create_post.py  create_user.py  delete_community_user.py  delete_user_community.py  update_comment.py  update_community.py  update_post.py  update_user.py
momentum_gql/src/app/resolvers/queries/: search_comments.py  search_communities.py  search_posts.py  search_users.py
momentum_gql/src/app/resolvers/scalars/: __init__.py  emailaddr.py
momentum_gql/src/app/resolvers/types/: __init__.py  comment.py  community.py  post.py  user.py
momentum_gql/src/app/resolvers/unions/: __init__.py
momentum_gql/src/app/resources/: context.py  schema_utils.py
momentum_gql/src/app/resources/schema/: enum.graphql  input.graphql  mutation.graphql  query.graphql  scalar.graphql  type.graphql
(+32 files in other folders)
